Replace Lucene morphology with AOT library, remove MorphologyConfig